# helpdesk_rag_project

./: docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  router.py
app/llm/: llm_factory.py  prompts.py
app/memory/: cache.py  redis_checkpoint.py
app/models/: api.py
app/original/: langraph_pipeline_typed_original.py
app/pipeline/: graph.py
app/pipeline/nodes/: evaluate_node.py  generate_node.py  intent_node.py  postprocess_node.py  retrieve_node.py
app/utils/: ticket.py
app/vectorstore/: load_vectorstore.py
data/vector_db/: index.faiss  index.pkl
scripts/: ingest_pdfs.py
