[project]
name = "helpdesk-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.3",
    "flashrank>=0.2.10",
    "langchain==0.3.27",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "langchain-unstructured>=0.1.6",
    "langgraph>=1.0.1",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sentence-transformers>=5.1.2",
    "unstructured[pdf]>=0.18.21",
    "uvicorn>=0.38.0",
]
